name:                fitbitsaver
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/servant#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Types
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , datetime
                     , aeson
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , acid-state
                     , safecopy
                     , mtl
  default-language:    Haskell2010

executable fitbitsaver
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , servant
                     , servant-server
                     , fitbitsaver
                     , warp >= 3.1.3.1
                     , either
                     , acid-state
  default-language:    Haskell2010

test-suite fitbitsaver-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , servant
                     , servant-server
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/servant
